# agent-logos-console

./: README.md
backend/node-nestjs/: .env.example  .gitignore  .npmrc  .pnpmfile.cjs  database.sqlite  eslint.config.mjs  package.json  pnpm-lock.yaml
backend/node-nestjs/src/: app.module.ts  main.ts
backend/node-nestjs/src/database/: data-source.ts
backend/node-nestjs/src/database/entities/: agent.entity.ts  (+3 more)
backend/node-nestjs/test/: app.e2e-spec.ts
backend/python-fastapi/: .env.example  Makefile  README.md  app.db  pyproject.toml  requirements.txt  start_server.py  test_installation.py
backend/python-fastapi/app/: database.py  main.py
backend/python-fastapi/app/api/: agents.py  auth.py  community.py  points.py
backend/python-fastapi/app/core/: config.py  database.py  security.py
backend/python-fastapi/app/models/: agent.py  post.py  user.py
backend/python-fastapi/app/schemas/: agent.py  post.py  user.py
backend/python-fastapi/scripts/: dev_with_uv.sh  setup_with_uv.sh
docs/: qoder-pnpm-config.md
frontend/vue3-element-plus/: .env  .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/vue3-element-plus/src/: App.vue  main.ts
frontend/vue3-element-plus/src/assets/: main.css
frontend/vue3-element-plus/src/router/: index.ts
frontend/vue3-element-plus/src/services/: api.ts  authService.ts
frontend/vue3-element-plus/src/styles/: element-theme.scss  element-variables.scss
frontend/vue3-element-plus/src/views/: BackupView.vue  CheckoutView.vue  FaqView.vue  HomeView.vue  PricingView.vue
(+56 files in other folders)
